[gitignore]添加java的忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,43 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+
+
+
+
+
+
+
+# Java ignore
+
+# Operating System Files 
+
+*.DS_Store 
+Thumbs.db 
+*.sw? 
+.#* 
+*# 
+*~ 
+*.sublime-* 
+
+# Build Artifacts 
+
+.gradle/
+build/
+target/
+bin/
+dependency-reduced-pom.xml 
+
+# Eclipse Project Files 
+
+.classpath
+.project
+.settings/ 
+
+# IntelliJ IDEA Files 
+
+*.iml
+*.ipr 
+*.iws 
+*.idea 
