--- a/ebay_dapp/Ebay/app/package.json
+++ b/ebay_dapp/Ebay/app/package.json
@@ -9,10 +9,12 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.6.0",
+    "ethereumjs-util": "5.1.2",
+    "ipfs-api": "14.1.2",
+    "truffle-contract": "^1.1.11",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "ethereumjs-util": "5.1.2"
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "web3": "^1.0.0-beta.37"
